--- a/Assets/UI Toolkit/ChooseBoard.uxml
+++ b/Assets/UI Toolkit/ChooseBoard.uxml
@@ -7,37 +7,73 @@
             <engine:VisualElement>
                 <engine:VisualElement class="horizontal" style="margin-top: 10px; margin-right: 10%; margin-left: 10%;">
                     <engine:VisualElement class="horizontal" style="flex-grow: 1;">
-                        <engine:Button text="Load File" name="LoadFile" class="button" style="padding-top: 8px; padding-bottom: 8px; padding-right: 8px; padding-left: 8px; margin-top: 2px; margin-right: 20px; margin-bottom: 2px; margin-left: 4px;" />
+                        <engine:Button text="Load File" name="LoadFile" class="button" style="padding-top: 8px; padding-bottom: 8px; padding-right: 8px; padding-left: 8px; margin-top: 2px; margin-right: 20px; margin-bottom: 2px; margin-left: 4px;">
+                            <Bindings>
+                                <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396169)" />
+                            </Bindings>
+                        </engine:Button>
                         <engine:VisualElement>
-                            <engine:DropdownField label="Language" choices="English,Polski,Espanol" index="0" name="Language" class="darkUI menuItem buttonBeside" style="min-width: 330px; margin-top: 2px; margin-right: 2px; margin-bottom: 2px; margin-left: 2px;" />
+                            <engine:DropdownField label="Language" choices="English,Polski,Espanol" index="0" name="Language" class="darkUI menuItem buttonBeside" style="min-width: 330px; margin-top: 2px; margin-right: 2px; margin-bottom: 2px; margin-left: 2px;">
+                                <Bindings>
+                                    <UnityEngine.Localization.LocalizedString property="label" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396161)" />
+                                </Bindings>
+                            </engine:DropdownField>
                         </engine:VisualElement>
-                        <engine:Button text="Create Random" name="CreateRandom" class="button" style="padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px; margin-top: 2px; margin-right: 20px; margin-bottom: 2px; margin-left: 4px;" />
+                        <engine:Button text="Create Random" name="CreateRandom" class="button" style="padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px; margin-top: 2px; margin-right: 20px; margin-bottom: 2px; margin-left: 4px;">
+                            <Bindings>
+                                <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396172)" />
+                            </Bindings>
+                        </engine:Button>
                         <engine:VisualElement template="SliderWithText">
                             <engine:VisualElement name="WordLength" enabled="true" class="horizontal menuItem" style="margin-top: 2px; margin-right: 2px; margin-bottom: 2px; margin-left: 2px;">
-                                <engine:Label text="Word Length" style="margin-top: 0;" />
+                                <engine:Label text="Word Length" style="margin-top: 0;">
+                                    <Bindings>
+                                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396173)" />
+                                    </Bindings>
+                                </engine:Label>
                                 <engine:SliderInt value="10" high-value="40" fill="true" low-value="3" class="SliderMenu" style="min-width: 100px; margin-left: 10px; margin-top: 1px; margin-right: 1px; margin-bottom: 1px; align-self: stretch;" />
                                 <engine:Label text="10" name="Amount" style="min-width: 35px; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 5px;" />
                             </engine:VisualElement>
                         </engine:VisualElement>
                     </engine:VisualElement>
                 </engine:VisualElement>
-                <engine:VisualElement name="Categories" style="flex-grow: 1; margin-top: 20px; margin-left: 10%; margin-right: 10%; background-color: rgba(27, 27, 27, 0.5); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; border-top-width: 10px; border-right-width: 10px; border-bottom-width: 10px; border-left-width: 10px;">
+                <engine:VisualElement name="Categories" style="flex-grow: 1; margin-top: 20px; margin-left: 10%; margin-right: 10%; background-color: rgba(27, 27, 27, 0.96); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; border-top-width: 10px; border-right-width: 10px; border-bottom-width: 10px; border-left-width: 10px;">
                     <engine:VisualElement style="flex-grow: 1; min-height: 400px;">
-                        <engine:VisualElement name="VisualElement" style="flex-grow: 0; flex-direction: row;">
+                        <engine:VisualElement name="VisualElement" style="flex-grow: 0; flex-direction: row; background-color: rgba(58, 54, 54, 0.5); border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;">
                             <engine:VisualElement style="flex-grow: 1; flex-direction: row;">
-                                <engine:Label text="Categories" style="margin-bottom: 2px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; margin-right: 10px; align-self: center;" />
-                                <engine:Button text="Random" name="PickRandom" class="button" style="padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px; margin-top: 2px; margin-right: 10px; margin-bottom: 2px; margin-left: 4px;" />
-                                <engine:Toggle name="Diagonal" text="Diagonal" class="buttonBeside" />
-                                <engine:Toggle name="Reversed" text="Reversed" class="buttonBeside" />
+                                <engine:Label text="Categories" style="margin-bottom: 2px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; margin-right: 10px; align-self: center;">
+                                    <Bindings>
+                                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396174)" />
+                                    </Bindings>
+                                </engine:Label>
+                                <engine:Button text="Random" name="PickRandom" class="button" style="padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px; margin-top: 2px; margin-right: 10px; margin-bottom: 2px; margin-left: 4px;">
+                                    <Bindings>
+                                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396171)" />
+                                    </Bindings>
+                                </engine:Button>
+                                <engine:Toggle name="Diagonal" text="Diagonal" class="buttonBeside">
+                                    <Bindings>
+                                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(3085863239680)" />
+                                    </Bindings>
+                                </engine:Toggle>
+                                <engine:Toggle name="Reversed" text="Reversed" class="buttonBeside">
+                                    <Bindings>
+                                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(3131807645696)" />
+                                    </Bindings>
+                                </engine:Toggle>
                             </engine:VisualElement>
                             <engine:VisualElement style="max-width: 30%;">
                                 <engine:VisualElement style="flex-grow: 1; flex-direction: column;">
-                                    <engine:TextField placeholder-text="Search Ctrl+F" max-length="255" hide-placeholder-on-focus="true" name="Search" class="text_black" style="max-width: 300px; min-width: 200px; flex-direction: column; align-self: flex-end;" />
+                                    <engine:TextField placeholder-text="Search Ctrl+F" max-length="255" hide-placeholder-on-focus="true" name="Search" class="text_black" style="max-width: 300px; min-width: 200px; flex-direction: column; align-self: flex-end;">
+                                        <Bindings>
+                                            <UnityEngine.Localization.LocalizedString property="placeholderText" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396175)" />
+                                        </Bindings>
+                                    </engine:TextField>
                                 </engine:VisualElement>
                             </engine:VisualElement>
                         </engine:VisualElement>
                         <engine:TreeView name="TreeView" show-alternating-row-backgrounds="None" virtualization-method="DynamicHeight" class="SameBGColor" />
-                        <engine:Label text="There is nothing here" name="TreeEmpty" class="title error_text" style="-unity-text-align: upper-center;" />
+                        <engine:Label text="There are no Categories matching your search" name="TreeEmpty" picking-mode="Ignore" class="title error_text" style="-unity-text-align: upper-center; white-space: normal;" />
                     </engine:VisualElement>
                 </engine:VisualElement>
             </engine:VisualElement>
