--- a/Assets/UI Toolkit/InGameOverlay.uxml
+++ b/Assets/UI Toolkit/InGameOverlay.uxml
@@ -12,13 +12,17 @@
         <engine:VisualElement name="Lists" style="flex-grow: 1;">
             <engine:GroupBox name="WordsList" style="margin-bottom: 0; padding-bottom: 0; margin-top: 0; padding-top: 0; flex-shrink: 1; flex-grow: 1;">
                 <engine:Label text="Words Left" class="header" style="align-self: flex-end; max-width: 180px;">
-                    <Bindings />
+                    <Bindings>
+                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(45769407610880)" />
+                    </Bindings>
                 </engine:Label>
                 <engine:ListView name="WordsLeft" style="flex-grow: 1; flex-shrink: 0;" />
             </engine:GroupBox>
             <engine:GroupBox name="WordsList" style="margin-top: 0; padding-top: 0; flex-shrink: 0; flex-grow: 1;">
                 <engine:Label text="Words Found" class="header" style="align-self: flex-end; max-width: 180px;">
-                    <Bindings />
+                    <Bindings>
+                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(71674100203520)" />
+                    </Bindings>
                 </engine:Label>
                 <engine:ListView name="WordsFound" selection-type="None" style="flex-grow: 1; flex-shrink: 0;" />
             </engine:GroupBox>
