--- a/Assets/UI Toolkit/MainMenu.uxml
+++ b/Assets/UI Toolkit/MainMenu.uxml
@@ -5,8 +5,16 @@
             <ui:VisualElement style="flex-grow: 1; margin-top: 10%; align-items: center;">
                 <ui:VisualElement class="header text_white" style="flex-grow: 1;">
                     <ui:Label text="Word Search" class="title" style="-unity-text-align: upper-center;" />
-                    <ui:Button text="New Game" name="Start" class="button" style="padding-right: 10px; padding-left: 10px;" />
-                    <ui:Button text="Quit" name="Quit" class="button" style="margin-top: 30px;" />
+                    <ui:Button text="New Game" name="Start" class="button" style="padding-right: 10px; padding-left: 10px;">
+                        <Bindings>
+                            <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430782201857)" />
+                        </Bindings>
+                    </ui:Button>
+                    <ui:Button text="Quit" name="Quit" class="button" style="margin-top: 30px;">
+                        <Bindings>
+                            <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396160)" />
+                        </Bindings>
+                    </ui:Button>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
