--- a/Assets/UI Toolkit/CongratulationsYouWon.uxml
+++ b/Assets/UI Toolkit/CongratulationsYouWon.uxml
@@ -3,10 +3,18 @@
     <ui:VisualElement class="text_aliceblue roboto-font" style="flex-grow: 1; margin-top: 10%; align-items: center;">
         <ui:VisualElement style="flex-grow: 1;">
             <ui:VisualElement style="background-color: rgba(0, 0, 0, 0.9); border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;">
-                <ui:Label text="Congratulations&#10;You Won" class="title" style="-unity-text-align: upper-center;" />
+                <ui:Label text="Congratulations&#10;You Won" class="title" style="-unity-text-align: upper-center;">
+                    <Bindings>
+                        <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18923038481858560)" />
+                    </Bindings>
+                </ui:Label>
                 <ui:VisualElement class="header" style="flex-grow: 0; flex-direction: row; flex-wrap: nowrap;">
-                    <ui:Label text="Time: " />
-                    <ui:Label name="time" style="margin-left: 5px;" />
+                    <ui:Label text="Time: ">
+                        <Bindings>
+                            <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(45528428068864)" />
+                        </Bindings>
+                    </ui:Label>
+                    <ui:Label name="time" style="margin-left: 10px;" />
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
