--- a/Assets/UI Toolkit/MainMenu.uxml
+++ b/Assets/UI Toolkit/MainMenu.uxml
@@ -10,7 +10,12 @@
                             <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430782201857)" />
                         </Bindings>
                     </ui:Button>
-                    <ui:Button text="Quit" name="Quit" class="button" style="margin-top: 30px;">
+                    <ui:Button text="New Game" name="Settings" class="button" style="padding-right: 10px; padding-left: 10px;">
+                        <Bindings>
+                            <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(125779329024)" />
+                        </Bindings>
+                    </ui:Button>
+                    <ui:Button text="Quit" name="Quit" class="button" style="margin-top: 50px;">
                         <Bindings>
                             <UnityEngine.Localization.LocalizedString property="text" table="GUID:39dd52e2b1131a04eb35f8c3c5ff1f7b" entry="Id(18200430786396160)" />
                         </Bindings>
